tests/option_2_tests/pass/heap.gpy
fn f(x: i32) -> i32 {
   if x == 3 / 1 then
     3
   else (
     alloc(100, false);
     f(x-1)
   )
}

f(200)