tests/option_2_tests/fail/funptr3.gpy
fn f(x: i32) -> i32 { x }
fn g(x: i32) -> i32 ( x + 1 )

let fptr = if false then @f else @g in call(fptr, 3)